# fraction-optic-demo

./: cabal.project  readme.md
fraction-optic/: fraction-optic.cabal
fraction-optic/test/: Main.hs
nix/: default.nix
nix/haskell/: integer-types.nix
