cabal-version: 3.0

name: fraction-optic
version: 0

common base
    default-language: GHC2021
    ghc-options: -Wall

    default-extensions:
        BlockArguments
        LambdaCase

    build-depends:
      , base ^>= 4.16
      , integer-types ^>= 0.1.4
      , optics-core ^>= 0.4.1

library
    import: base
    hs-source-dirs: library
    exposed-modules:
        FractionOptic

test-suite test-fraction-optic
    import: base
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
      , fraction-optic
      , hspec ^>= 2.8.5
